# losscast-bench

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTE.md  DESIGN.md  LICENSE  PREDICT.md  README.md  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: data_contribution.md
.github/workflows/: validate-contribution.yml
baselines/: README.md  feature_ablation_log.txt  full_comparison.json  nanochat_chinchilla_params.json
data/: split_manifest.json
docs/: data.md  index.html  metrics.md
losscast-dev/: PLANS.md  PUBLISH_PLAN.md  README.md  V0_PLAN.md
losscast-dev/agents/: convert_and_validate.md  run_conversion_test.sh
losscast-dev/convert/: marin_raw_to_bench.py  nanochat_to_bench.py  ncpl_to_bench.py
losscast-dev/explore/: inspect_marin_raw.py  inspect_ncpl.py
losscast-dev/splits/: build_splits.py
losscast_bench/: __init__.py  schema.py
losscast_bench/baselines/: __init__.py  chinchilla.py  chinchilla_refit.py  mlp_baseline.py  pca_xgboost.py  two_stage.py  xgboost_baseline.py  xgboost_ensemble.py  xgboost_feat_v1.py  xgboost_v2.py  (+1 more)
scripts/: _ablate.py  _ablate_features.py  _ablate_marin.py  _persource_one.py  _sweep_marin.py  compare_baselines.py  eval_cli.py  generate_sample_data.py  nanochat_to_bench.py  run_baseline.py  train_chinchilla_refit.py  train_mlp.py  train_pca_xgboost.py  train_two_stage.py  train_xgboost.py  train_xgboost_ensemble.py  train_xgboost_feat_v1.py  train_xgboost_ultimate.py  train_xgboost_v2.py  validate_contribution.py
templates/: config.json  optimizer.py
tests/: test_cli.py  test_e2e.py  test_schema.py  test_scoring.py
(+12506 files in other folders)
